--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +34,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.13.13",
+    "babel-core": "^7.0.0-0",
+    "babel-loader": "^7.1.4",
+    "css-loader": "^0.28.11",
+    "mini-css-extract-plugin": "1.3.0",
+    "style-loader": "^0.20.3",
+    "webpack": "4.19.0",
+    "webpack-cli": "^2.1.5"
   }
 }
